Static, relative, fixed, absoulte and overflow

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,18 +1,21 @@
 main{
     padding-top: 32px;
 }
-.package{
-    width: 80%;
-    margin: 16px 0;
-    border: 4px solid #0e4f1f;
-    border-left: none;
+
+.packground{
+    background: url('../images/plans-background.jpg');
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1;
 }
 
 .package{
     width: 80%;
     margin: 16px 0;
-    border:4px solid #0e4f1f;
+    border: 4px solid #0e4f1f;
     border-left: none;
+    position: relative;
 }
 
 .package:hover,
@@ -32,6 +35,17 @@ main{
 .package__title{
     font-family:inherit;
     color: black;
+}
+
+.package__badge{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 20px;
+    font-size: 12px;
+    color: white;
+    background: #ff5454;
+    padding: 8px;
 }
 
 .package__subtitle{
